# LifeOps

./: .gitignore  AGENTS.md  Cargo.toml  README.md  implementation.md  import-rules.yaml
crates/lifeops-cli/: Cargo.toml
crates/lifeops-cli/src/: main.rs  run.rs
crates/lifeops-core/: Cargo.toml
crates/lifeops-core/src/: error.rs  lib.rs
crates/lifeops-core/src/entity/: mod.rs  recurrence.rs  search.rs  store.rs  validate.rs
crates/lifeops-core/src/import/: apply.rs  coerce.rs  map.rs  markdown.rs  mod.rs  route.rs  rules.rs  table.rs
crates/lifeops-core/src/schema/: kind.rs  mod.rs  raw.rs  resolve.rs  write.rs
crates/lifeops-core/src/view/: mod.rs  query.rs
crates/lifeops-core/tests/: integration.rs
crates/lifeops-server/: Cargo.toml
crates/lifeops-server/src/: app.rs  lib.rs  main.rs  state.rs  static_files.rs
crates/lifeops-server/src/mcp/: logic.rs  mod.rs  params.rs
crates/lifeops-server/src/routes/: entities.rs  misc.rs  schemas.rs  system.rs
crates/lifeops-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crates/lifeops-tauri/capabilities/: default.json
crates/lifeops-tauri/icons/: icon.icns
crates/lifeops-tauri/src/: lib.rs  main.rs
crates/lifeops-tauri/ui/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  App.test.ts  app.css  vite-env.d.ts
frontend/src/lib/: DetailView.svelte  DetailView.test.ts  EntityTable.svelte  EntityTable.test.ts  FieldRowEditor.svelte  FieldRowEditor.test.ts  PageRenderer.svelte  PageRenderer.test.ts  ProvenanceTrigger.svelte  ProvenanceTrigger.test.ts  SearchPalette.svelte  Sidebar.svelte  Sidebar.test.ts  ValueCell.svelte  ValueCell.test.ts  api.test.ts  api.ts  provenance.test.ts  provenance.ts  router.svelte.ts  router.test.ts  tauri.test.ts  tauri.ts  types.ts
frontend/src/lib/pages/: Browse.svelte  Detail.svelte  Home.svelte  New.svelte  PageView.svelte  Settings.svelte  Settings.test.ts  TypeEditor.svelte  TypeEditor.test.ts
frontend/src/lib/widgets/: ListWidget.svelte  MoneyList.test.ts  MoneyWidget.svelte  NoteEditor.svelte  NoteEditor.test.ts  ProfileView.svelte  ProfileView.test.ts  Widget.svelte  Widget.test.ts
schemas/: 노트.yaml
seed/: categories.yaml
seed/schemas/: 물건.yaml  프로필.yaml  할일.yaml
seed/views/: 홈.yaml
